Fix a bug, introduced by r93, where the first option of the left menu was almost unclickable due to the header logo div overlapping it.

--- a/qmrf-war/src/main/webapp/style/ambit.css
+++ b/qmrf-war/src/main/webapp/style/ambit.css
@@ -94,6 +94,7 @@ h1 {
 #menu {
 	position: relative;
 	padding: 10px;
+	z-index: 2;
 }
 
 ul#navmenu {
